--- a/config.json
+++ b/config.json
@@ -81,6 +81,38 @@
       "api": "https://cj.lziapi.com/api.php/provide/vod",
       "name": "量子资源站"
     },
+    "ckzy": {
+      "api": "https://www.ckzy1.com",
+      "name": "CK资源站"
+    },
+     "jkun": {
+      "api": "https://jkunzyapi.com",
+      "name": "jkun资源"
+    },
+    "bwzy": {
+      "api": "https://api.bwzym3u8.com",
+      "name": "百万资源"
+    },
+    "souavzy": {
+      "api": "https://api.souavzy.vip",
+      "name": "souav资源"
+    },
+    "155zy": {
+      "api": "https://155api.com",
+      "name": "155资源"
+    },
+    "huangcang": {
+      "api": "https://hsckzy.vip",
+      "name": "黄色仓库"
+    },
+     "1sb": {
+      "api": "https://apilsbzy1.com",
+      "name": "1sb资源"
+    },
+     "yutu": {
+      "api": "https://yutuzy10.com",
+      "name": "玉兔资源"
+    },
     "xiaomaomi": {
       "api": "https://zy.xmm.hk/api.php/provide/vod",
       "name": "小猫咪资源"
